--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,9 @@
 
 # dependencies
 node_modules
-.pnp
-.pnp.js
+.pnp.loader.mjs
+.pnp.cjs
+.yarn
 
 # testing
 coverage
@@ -21,3 +22,4 @@ build
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+yarn.lock
