--- a/package.json
+++ b/package.json
@@ -1,86 +1,38 @@
 {
-	"name": "build-a-quiz-component-with-react",
-	"version": "0.1.1",
-	"private": true,
-	"scripts": {
-		"start": "react-scripts start",
-		"build": "react-scripts build",
-		"test": "react-scripts test",
-		"eject": "react-scripts eject"
-	},
-	"browserslist": {
-		"production": [
-			">0.2%",
-			"not dead",
-			"not op_mini all"
-		],
-		"development": [
-			"last 1 chrome version",
-			"last 1 firefox version",
-			"last 1 safari version"
-		]
-	},
-	"dependencies": {
-		"@testing-library/jest-dom": "^5.11.10",
-		"@testing-library/react": "^11.2.6",
-		"@testing-library/user-event": "^12.8.3",
-		"react": "^17.0.2",
-		"react-dom": "^17.0.2",
-		"react-scripts": "^5.0.1",
-		"web-vitals": "^1.1.1"
-	},
-	"devDependencies": {
-		"@wojtekmaj/enzyme-adapter-react-17": "^0.6.1",
-		"babel-eslint": "10.1.0",
-		"babel-loader": "8.2.2",
-		"babylon": "^6.18.0",
-		"chai": "^4.3.4",
-		"eslint": "7.30.0",
-		"eslint-loader": "4.0.2",
-		"eslint-plugin-import": "2.23.4",
-		"eslint-plugin-react": "7.24.0",
-		"enzyme": "^3.11.0",
-		"sinon": "^10.0.1",
-		"webpack": "5.74.0",
-		"webpack-bundle-analyzer": "4.4.2",
-		"webpack-cli": "4.10.0"
-	},
-	"babel": {
-		"presets": [
-			"babel-preset-react-app"
-		]
-	},
-	"eslintConfig": {
-		"extends": [
-			"eslint:recommended",
-			"plugin:react/recommended",
-			"plugin:import/errors",
-			"plugin:import/warnings"
-		],
-		"parser": "babel-eslint",
-		"parserOptions": {
-			"ecmaVersion": 2018,
-			"sourceType": "module",
-			"ecmaFeatures": {
-				"jsx": true
-			}
-		},
-		"env": {
-			"browser": true,
-			"node": true,
-			"es6": true
-		},
-		"rules": {
-			"no-debugger": "off",
-			"no-console": "off",
-			"no-unused-vars": "warn",
-			"react/prop-types": "warn"
-		},
-		"settings": {
-			"react": {
-				"version": "detect"
-			}
-		},
-		"root": true
-	}
+  "name": "build-a-quiz-component-with-react",
+  "version": "0.1.1",
+  "private": true,
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
+  "dependencies": {
+    "@testing-library/jest-dom": "^5.11.10",
+    "@testing-library/react": "^11.2.6",
+    "@testing-library/user-event": "^12.8.3",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "web-vitals": "^1.1.1"
+  },
+  "devDependencies": {
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.1",
+    "babylon": "^6.18.0",
+    "chai": "^4.3.4",
+    "enzyme": "^3.11.0",
+    "sinon": "^10.0.1"
+  }
 }
